<resources>
    <string name="app_name">Hymns</string>
    <string name="welcomeNote">THE HYMN BOOK</string>
    <string name="noHymnVerse">Enter hymn number</string>
    <string name="search">search</string>
    <string name="hymn1"></string>

    <string name="title1">ȠWED IKWƆ</string>
    <string name="title2">THE CHURCH CONGREGRATIONAL HYMNS</string>
    <string name="title3">THE ENGLISH AND EFIK HYMN BOOK</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_hymn_activity">HYMNS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation Bar-->
    <string name="Hymn">Hymns</string>
    <string name="About">About</string>
    <string name="Setting">Settings</string>
    <string name="Help">Help &amp; Feedback</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_AppInfo">App Info</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="selectFontSize">Select font size</string>
    <string-array name="fontSizes">
        <item>14</item>
        <item>18</item>
        <item>24</item>
    </string-array>

    <string name="selectFontStyle">Select font style</string>
    <string-array name="fontstyles">
        <item>DEFAULT</item>
        <item>SANS SERIF</item>
        <item>SERIF</item>
        <item>MONOSPACE</item>
    </string-array>

    <string name="selectThemecolor">Select theme color</string>
    <string name="church_name">United Evangelic church</string>
    <string-array name="themes">
        <item>BLUE</item>
        <item>RED</item>
    </string-array>
</resources>
