<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stanlee.project.com.hymns.searchSearch">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:id="@+id/theHymnBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeNote"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/notification_large_icon_height"/>

        <EditText
            android:id="@+id/hymnNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/theHymnBook"
            android:layout_marginTop="30px"
            android:layout_centerHorizontal="true"
            android:hint="@string/noHymnVerse"
            android:textSize="@dimen/abc_text_size_body_1_material"
            android:inputType="number"
            android:maxLength="4"
            android:gravity="center"
            android:singleLine="true" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hymnNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:background="@android:color/transparent"
            android:text="@string/search" />


    </RelativeLayout>

</FrameLayout>
