<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="stanlee.project.com.hymns.HymnMenu.Setting">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Text Size"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/TextSizeID"
        android:gravity="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textsizes"
        android:layout_centerHorizontal="true"
        android:entries="@array/fontSizes"
        android:prompt="@string/selectFontSize"
        android:layout_below="@+id/TextSizeID"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Font Style"
        android:id="@+id/FontStyleID"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textsizes"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/styles"
        android:entries="@array/fontstyles"
        android:prompt="@string/selectFontStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/FontStyleID"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Theme Color"
        android:id="@+id/ThemeColorID"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/styles"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/themes"
        android:layout_below="@+id/ThemeColorID"
        android:entries="@array/themes"
        android:prompt="@string/selectThemecolor"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/themes"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="OK"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"/>

        </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
</ScrollView>